// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemarksPill matches snapshot 1`] = `
<div
  className="remarks-pill"
  style={
    Object {
      "backgroundColor": "#0071bc",
    }
  }
/>
`;

exports[`RemarksPill matches snapshot when remarks are provided 1`] = `
<div
  className="remarks-pill"
  style={
    Object {
      "backgroundColor": "#0071bc",
    }
  }
>
  Potential recognized by last promo board
</div>
`;
